--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <title>{% block title %}Twig 02{% endblock %}</title>
+    <title>{% block title %}Twig 03{% endblock %}</title>
 
 
     <link rel="stylesheet" href="/assets/css/style.css"> 
@@ -24,6 +24,7 @@
 <body>
     {% block content %}
     {% include "_navbar.html.twig" %}
+    {% include "_footer.html.twig" %}
     {% endblock %}
 </body>
 
